sidebar responsive overlap bug fix

--- a/src/style/blog.less
+++ b/src/style/blog.less
@@ -107,7 +107,6 @@ a:hover {
 }
 #layout {
 	margin-left: 0 1em 0 1em;
-	height: 100%;
 }
 .content {
 	h1, h2, h3, h4 {
